syntax = "proto3";

package metadata;

option go_package = "./";

service MetadataService {
  rpc GetTables (GetTablesRequest) returns (GetTablesResponse);
  rpc GetFields (GetFieldsRequest) returns (GetFieldsResponse);
  rpc GetConstraints (GetConstraintsRequest) returns (GetConstraintsResponse);
}

message GetTablesRequest {
  string schema_name = 1;
}

message GetTablesResponse {
  repeated TableInfo tables = 1;
}

message TableInfo {
    string catalog = 1;
    string schema = 2;
    string name = 3;
    string type = 4;
    int64 row_count = 5;
    int64 bytes = 6;
    string created_at = 7;
    string last_altered = 8;
    string last_ddl = 9;
}


message GetFieldsRequest {
  string table_name = 1;
}

message GetFieldsResponse {
  repeated FieldInfo fields = 1;
}

message FieldInfo {
  string name = 1;
  string type = 2;
  string is_nullable = 3;
  string key = 4;
  string default_value = 5;
  string extra = 6;
}

message GetConstraintsRequest {
  string table_name = 1;
}

message GetConstraintsResponse {
  repeated ConstraintInfo constraints = 1;
}

message ConstraintInfo {
  string name = 1;
  string type = 2;
  string enforced = 3;
}
